[gd_scene load_steps=7 format=3 uid="uid://dblp1qvk5f0i"]

[ext_resource type="PackedScene" uid="uid://befcu22pnaae5" path="res://autoload/rolln_around/level/game_mode/game_mode.tscn" id="1_cpkwp"]
[ext_resource type="Script" uid="uid://26yb2kgpdd1v" path="res://autoload/rolln_around/level/game_mode/game_modes/solo_level/solo_level.gd" id="2_sfxia"]
[ext_resource type="PackedScene" uid="uid://65kga7r7l3mc" path="res://autoload/rolln_around/menus/main_menu/main_menu_button/main_menu_button.tscn" id="3_j5wgn"]
[ext_resource type="Texture2D" uid="uid://d4bfxar0a8ulc" path="res://res/icons/function-fill.svg" id="5_emv6i"]
[ext_resource type="Texture2D" uid="uid://ejg5gg1c1ujn" path="res://res/icons/arrow-left-fill.svg" id="6_pucxj"]
[ext_resource type="Texture2D" uid="uid://bjuk3sc7hh5h1" path="res://res/icons/restart-line.svg" id="8_fadtk"]

[node name="SoloLevel" groups=["Collectible", "Goal"] instance=ExtResource("1_cpkwp")]
script = ExtResource("2_sfxia")

[node name="Results" type="Control" parent="." index="0"]
unique_name_in_owner = true
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Buttons" type="VBoxContainer" parent="Results" index="0"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = -1
anchor_left = 0.25
anchor_top = 0.449667
anchor_right = 0.75
anchor_bottom = 1.0
offset_top = 0.199799
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_layout_mode = 1
metadata/_edit_use_custom_anchors = true
metadata/_edit_use_anchors_ = true

[node name="Reset" parent="Results/Buttons" index="0" instance=ExtResource("3_j5wgn")]
unique_name_in_owner = true
layout_mode = 2
text = "Reset"
real_icon = ExtResource("8_fadtk")

[node name="LevelSelect" parent="Results/Buttons" index="1" instance=ExtResource("3_j5wgn")]
layout_mode = 2
text = "Goto Level Select"
real_icon = ExtResource("5_emv6i")

[node name="MainMenu" parent="Results/Buttons" index="2" instance=ExtResource("3_j5wgn")]
layout_mode = 2
text = "Goto Main Menu"
real_icon = ExtResource("6_pucxj")

[node name="SpoonIndicators" type="Control" parent="." index="1"]
visible = false
layout_mode = 3
anchor_left = 0.500444
anchor_right = 1.0
anchor_bottom = 0.148
offset_left = -0.320038
offset_bottom = 0.0800018
grow_horizontal = 0
pivot_offset = Vector2(800, 0)
mouse_filter = 2
metadata/_edit_layout_mode = 1
metadata/_edit_use_custom_anchors = true
metadata/_edit_use_anchors_ = true

[node name="SpoonsCollected" type="HBoxContainer" parent="SpoonIndicators" index="0"]
custom_minimum_size = Vector2(0, 80)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 0
alignment = 2
metadata/_edit_layout_mode = 1

[connection signal="pressed" from="Results/Buttons/Reset" to="." method="_on_reset_pressed"]
[connection signal="pressed" from="Results/Buttons/LevelSelect" to="." method="_on_level_select_pressed"]
[connection signal="pressed" from="Results/Buttons/MainMenu" to="." method="_on_main_menu_button_pressed"]
